<resources>
    <string name="app_name">MiBand2Connect</string>
    <string name="hardware_revision">Hardware revision</string>
    <string name="software_revision">Software revision</string>
    <string name="serial_number">Serial number</string>
    <string name="device_name">Device name</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="cancel">Cancel</string>

</resources>
